# storage/api-docs/api-docs.json
@@ -12,7 +12,7 @@
         }
     ],
     "paths": {
-        "/api/symbols/{company}/financial-statements": {
+        "/api/symbols/{company}/financial-statements?type=1&year=2024&quarter=4&limit=1": {
             "get": {
                 "tags": [
                     "Symbols"
@@ -22,8 +22,31 @@
                 "operationId": "TestId",
                 "parameters": [
                     {
-                        "name": "type",
+                        "name": "company",
                         "in": "path",
+                        "description": "Company Symbol",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        },
+                        "examples": {
+                            "Vietcomebank": {
+                                "summary": "Vietcomebank",
+                                "value": "VCB"
+                            },
+                            "MB Bank": {
+                                "summary": "MB Bank",
+                                "value": "MBB"
+                            },
+                            "Vietnamilk": {
+                                "summary": "Vietnamilk",
+                                "value": "VNM"
+                            }
+                        }
+                    },
+                    {
+                        "name": "type",
+                        "in": "query",
                         "description": "Statement type",
                         "required": true,
                         "schema": {
@@ -46,7 +69,7 @@
                     },
                     {
                         "name": "year",
-                        "in": "path",
+                        "in": "query",
                         "description": "Year",
                         "required": true,
                         "schema": {
@@ -61,7 +84,7 @@
                     },
                     {
                         "name": "quarter",
-                        "in": "path",
+                        "in": "query",
                         "description": "Quarter value to query retrieve from a specific quarter or retrieve yearly statements",
                         "required": true,
                         "schema": {
@@ -92,7 +115,7 @@
                     },
                     {
                         "name": "limit",
-                        "in": "path",
+                        "in": "query",
                         "description": "The amount of statement to get. Max is 8",
                         "required": true,
                         "schema": {
@@ -112,6 +135,9 @@
                     },
                     "400": {
                         "description": "Bad request, maybe missing required parameters"
+                    },
+                    "404": {
+                        "description": "No statements found"
                     }
                 }
             }
